update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-/main.exe
-*.xlsx
-*.xlsx
-output/PnL_Calculator.exe
-.idea/.name
-__pycache__/*
+
 *.pyc
-dist/main.exe
-log.log
+*.pyz
+.vscode/settings.json
+.vscode/launch.json
+/.directory
+*.npy
+*.iml
+/.idea/
+.hypothesis/
+.env
+*/build
+*.xlsx
